--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# Compiled class files
+*.class
 
-### STS ###
+# Log files
+*.log
+
+# Jar files
+*.jar
+
+# Maven generated files
+target/
+!/.mvn/wrapper/maven-wrapper.jar
+
+# Spring Tool Suite generated files
 .apt_generated
 .classpath
 .factorypath
@@ -13,21 +20,36 @@ target/
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
+# IntelliJ IDEA generated files
 .idea
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
+# NetBeans generated files
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
 build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
-### VS Code ###
+# VS Code generated files
 .vscode/
+
+# Gradle generated files
+/build/
+/out/
+!/gradle/wrapper/gradle-wrapper.jar
+
+# Other common binary files
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# OS generated files
+.DS_Store
+Thumbs.db
